@@ -9,11 +9,11 @@
 	###########################################################################
 	# English strings for Mantis
 	# -------------------------------------------------
-	# $Revision: 1.132 $
-	# $Author: int2str $
-	# $Date: 2003-03-31 22:21:06 $
+	# $Revision: 1.133 $
+	# $Author: jfitzell $
+	# $Date: 2003-04-23 19:32:42 $
 	#
-	# $Id: strings_english.txt,v 1.132 2003-03-31 22:21:06 int2str Exp $
+	# $Id: strings_english.txt,v 1.133 2003-04-23 19:32:42 jfitzell Exp $
 	###########################################################################
 ?>
 <?php
@@ -196,7 +196,7 @@
 	$MANTIS_ERROR[ERROR_CATEGORY_NOT_FOUND] = 'ERROR: Category not found.';
 	$MANTIS_ERROR[ERROR_VERSION_DUPLICATE]  = 'ERROR: A version with that name already exists.';
 	$MANTIS_ERROR[ERROR_VERSION_NOT_FOUND]  = 'ERROR: Version not found.';
-	$MANTIS_ERROR[ERROR_USER_NAME_INVALID]  = 'ERROR: The username is invalid.';
+	$MANTIS_ERROR[ERROR_USER_NAME_INVALID]  = 'ERROR: The username is invalid. Usernames may only contain letters, numbers, spaces, hyphens, and underscores.';
 
 	$s_login_error = 'ERROR: your account may be disabled or the username/password you entered is incorrect.';
 	$s_login_cookies_disabled = 'ERROR: Your browser either doesn\'t know how to handle cookies, or refuses to handle them.';
