@@ -3,7 +3,9 @@ Mantis ChangeLog
 2003.??.??  -  0.18.0a5
 
  * Enhancement: Show file attachment indicator on bug list page (#3088).
+ * New config option(user_login_valid_regex): regular expression used to validate new login names
  * Fix: Improved adherance to the XHTML standard.
+ * Fix: Allow spaces and hyphens in emails
  * Fix #2992: Unable to attach files to bugs on Windows servers with magic quotes ON.
  * Fix #3027: History summary a little bit too wide in emails.
  * Fix #3064: view bug buttons in vertical column
